--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "vite-vue-js",
+  "name": "medtronic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "set NODE_OPTIONS=--max-old-space-size=4096 && vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.8",
-    "html2canvas": "^1.4.1",
-    "pinia": "^3.0.4",
-    "sweetalert2": "^11.23.0",
-    "tailwindcss": "^4.1.8",
-    "vue": "^3.5.13",
-    "vue-router": "^4.6.3",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue": "^3.5.24"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.9",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "unplugin-icons": "^22.1.0",
-    "vite": "^6.3.5"
+    "@tailwindcss/vite": "^4.1.17",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "vite": "^7.2.4"
   }
 }
